Tip calculator v1 - numberDecimal fix

--- a/TipCalculator/res/layout/activity_bill_calculate.xml
+++ b/TipCalculator/res/layout/activity_bill_calculate.xml
@@ -29,7 +29,7 @@
              android:fontFamily="sans-serif-light"
              android:gravity="right"
              android:hint="@string/amount_hint"
-             android:inputType="number" >
+             android:inputType="numberDecimal" >
 
              <requestFocus />
          </EditText>
