--- a/TipCalculator/res/layout/activity_bill_calculate.xml
+++ b/TipCalculator/res/layout/activity_bill_calculate.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    tools:context="${packageName}.${activityClass}"
+    android:background="@drawable/skyblue" >
 
          <TextView
              android:id="@+id/tvBillAmount"
